# GFBackend/docs/swagger.yaml
@@ -2,12 +2,6 @@ basePath: /gf/api
 definitions:
   controller.ArticleTypeInfo:
     properties:
-      CreateDay:
-        example: "2020-02-02"
-        type: string
-      Creator:
-        example: James Bond
-        type: string
       Description:
         example: Discussion of Movie
         type: string
@@ -134,6 +128,19 @@ definitions:
         example: jamesbond21
         type: string
     type: object
+  model.ArticleType:
+    properties:
+      create_Day:
+        type: string
+      creator:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      typeName:
+        type: string
+    type: object
   model.Space:
     properties:
       capacity:
@@ -153,11 +160,36 @@ info:
   title: Gator Forum Backend API
   version: "1.0"
 paths:
+  /articletype/all:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: <b>Success</b>. User Login Successfully
+          schema:
+            items:
+              $ref: '#/definitions/model.ArticleType'
+            type: array
+        "400":
+          description: <b>Failure</b>. Bad Parameters / Type has existed
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+        "500":
+          description: <b>Failure</b>. Server Internal Error.
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+      summary: Get All Article Types
+      tags:
+      - Article Type Manage
   /articletype/create:
     post:
       consumes:
       - application/json
-      description: need token in cookie, need new article type information
+      description: need token in cookie, need new article type information, cannot
+        repeat type name
       parameters:
       - description: New Article Type Information
         in: body
@@ -169,11 +201,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: <b>Success</b>. User Login Successfully
+          description: <b>Success</b>. Create Successfully
           schema:
             $ref: '#/definitions/controller.ResponseMsg'
         "400":
-          description: <b>Failure</b>. Bad Parameters or Username / Password incorrect
+          description: <b>Failure</b>. Bad Parameters / Type has existed
           schema:
             $ref: '#/definitions/controller.ResponseMsg'
         "500":
@@ -183,6 +215,76 @@ paths:
       security:
       - ApiAuthToken: []
       summary: Create a new article type by admin user
+      tags:
+      - Article Type Manage
+  /articletype/remove:
+    post:
+      consumes:
+      - application/json
+      description: need token in cookie, need type name
+      parameters:
+      - description: Type Name
+        in: body
+        name: TypeName
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: <b>Success</b>. Remove Successfully
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+        "400":
+          description: <b>Failure</b>. Bad Parameters
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+        "500":
+          description: <b>Failure</b>. Server Internal Error.
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+      security:
+      - ApiAuthToken: []
+      summary: Admin user removes article type
+      tags:
+      - Article Type Manage
+  /articletype/update:
+    post:
+      consumes:
+      - application/json
+      description: need token in cookie, need type name & new description
+      parameters:
+      - description: Type Name
+        in: body
+        name: TypeName
+        required: true
+        schema:
+          type: string
+      - description: Description
+        in: body
+        name: Description
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: <b>Success</b>. Update Successfully
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+        "400":
+          description: <b>Failure</b>. Bad Parameters / Type has not existed
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+        "500":
+          description: <b>Failure</b>. Server Internal Error.
+          schema:
+            $ref: '#/definitions/controller.ResponseMsg'
+      security:
+      - ApiAuthToken: []
+      summary: Admin user update article type description
       tags:
       - Article Type Manage
   /community/create:
@@ -631,13 +733,6 @@ paths:
       consumes:
       - application/json
       description: need token in cookie
-      parameters:
-      - description: username in post request body
-        in: body
-        name: username
-        required: true
-        schema:
-          type: string
       produces:
       - application/json
       responses:
