# GFBackend/model/dao/ArticleTypeDAO.go
@@ -11,7 +11,8 @@ var articleTypeDAO *ArticleTypeDAO
 
 type IArticleTypeDAO interface {
 	CreateArticleType(articleType model.ArticleType) error
-	RemoveArticleType(articleTypeID int) error
+	RemoveArticleType(typeName string) error
+	UpdateDescription(typeName, newDescription string) error
 	GetArticleTypes() ([]model.ArticleType, error)
 }
 
@@ -33,13 +34,34 @@ func NewArticleTypeDAO() *ArticleTypeDAO {
 }
 
 func (articleTypeDAO *ArticleTypeDAO) CreateArticleType(articleType model.ArticleType) error {
+	result := articleTypeDAO.db.Omit("ID").Create(&articleType)
+	if result.Error != nil {
+		return result.Error
+	}
 	return nil
 }
 
-func (articleTypeDAO *ArticleTypeDAO) RemoveArticleType(articleTypeID int) error {
+func (articleTypeDAO *ArticleTypeDAO) RemoveArticleType(typeName string) error {
+	result := articleTypeDAO.db.Where("typeName = ?", typeName).Delete(&model.ArticleType{})
+	if result.Error != nil {
+		return result.Error
+	}
+	return nil
+}
+
+func (articleTypeDAO *ArticleTypeDAO) UpdateDescription(typeName, newDescription string) error {
+	result := articleTypeDAO.db.Model(&model.ArticleType{}).Where("typeName", typeName).Update("Description", newDescription)
+	if result.Error != nil {
+		return result.Error
+	}
 	return nil
 }
 
 func (articleTypeDAO *ArticleTypeDAO) GetArticleTypes() ([]model.ArticleType, error) {
-	return nil, nil
+	var articleTypes []model.ArticleType
+	result := articleTypeDAO.db.Find(&articleTypes)
+	if result.Error != nil {
+		return nil, result.Error
+	}
+	return articleTypes, nil
 }
