# GFBackend/router/reqs/ArticleTypeManageReqs.go
@@ -9,6 +9,9 @@ func InitArticleTypeManageReqs(baseGroup *gin.RouterGroup) *gin.RouterGroup {
 	articleTypeManageReqsGroup := baseGroup.Group("/articletype")
 	{
 		articleTypeManageReqsGroup.POST("/create", articleTypeManageController.CreateArticleType)
+		articleTypeManageReqsGroup.GET("/all", articleTypeManageController.GetArticleTypes)
+		articleTypeManageReqsGroup.POST("/remove", articleTypeManageController.RemoveArticleType)
+		articleTypeManageReqsGroup.POST("/update", articleTypeManageController.UpdateArticleTypeDescription)
 	}
 
 	return articleTypeManageReqsGroup
